--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,7 +18,7 @@ jobs:
         filters: .github/apps.yml
 
   build:
-    need: [change]
+    needs: [change]
     # Check if node_versions matrix is not empty to avoid error message:
     # "Error when evaluating 'strategy' for job '?'. (Line: ?, Col: ?): Matrix vector '?' does not contain any values"
     if: ${{ needs.change.outputs.app_envs != '[]' }}
