--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,7 +21,7 @@ jobs:
     needs: [change]
     # Check if node_versions matrix is not empty to avoid error message:
     # "Error when evaluating 'strategy' for job '?'. (Line: ?, Col: ?): Matrix vector '?' does not contain any values"
-    if: ${{ needs.change.outputs.app_envs != '[]' }}
+    if: ${{ needs.change.outputs.app_ids != '[]' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
