parent ae32d20b20c96fe73e6244476fc4eabf55d897be author Bruno CHIREZ <contact@brunochirez.com> 1628158467 +0200 committer Bruno CHIREZ <contact@brunochirez.com> 1628166971 +0200
parent ae32d20b20c96fe73e6244476fc4eabf55d897be
author Bruno CHIREZ <contact@brunochirez.com> 1628158467 +0200
committer Bruno CHIREZ <contact@brunochirez.com> 1628166941 +0200

parent ae32d20b20c96fe73e6244476fc4eabf55d897be
author Bruno CHIREZ <contact@brunochirez.com> 1628158467 +0200
committer Bruno CHIREZ <contact@brunochirez.com> 1628166915 +0200

Add Readme

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,12 +21,12 @@ jobs:
     needs: [change]
     # Check if node_versions matrix is not empty to avoid error message:
     # "Error when evaluating 'strategy' for job '?'. (Line: ?, Col: ?): Matrix vector '?' does not contain any values"
-    if: ${{ needs.change.outputs.app_envs != '[]' }}
+    if: ${{ needs.change.outputs.app_ids != '[]' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        APP_ID: ${{ fromJson(needs.changes.outputs.app_ids) }}
+        APP_ID: ${{ fromJson(needs.change.outputs.app_ids) }}
     steps:
     - run: |
         echo "APP_ID: ${{ matrix.APP_ID}}"
